--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Shopping App || Home</title>
         <link rel="icon" href="logo-coca-cola.png" />
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-        <link rel="stylesheet" href="/src/style.css">
+        <link rel="stylesheet" href="./src/style.css">
     </head>
     <body>
         <div id="vue-app">
@@ -48,6 +48,6 @@
         <script>
             
         </script>
-        <script src="/src/main.js"></script>
+        <script src="./src/main.js"></script>
     </body>
 </html> 
